2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* include/avr/pgmspace.h: Document PRG_RDB [Bug #2839].
	Change strncat to strncat_P [Bug #2838].

2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/stdio.h, libc/stdio/fdevopen.c:
	Move dox comment for fdevopen() from stdio.h to fdevopen.c to work
	around a broken html link due to a bug in doxygen. [Bug #2845]

2003-03-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-02-28  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* NEWS, doc/api/main_page.dox: Note AT43USB320 support.
	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in, include/avr/io.h: Add support for AT43USB320.
	* include/avr/io43u32x.h: New file, thanks to Keith Gudger.
	* include/avr/io43u35x.h: Remove defines for the non-existent
	UART and analog comparator.  Remove IAR compatibility defines.
	(RAMEND, XRAMEND, FLASHEND): Update to match the datasheet.

2003-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add entry about integer promotion with
	bitwise operators.

2003-02-27  Theodore A. Roth  <troth@openavr.org>

	* NEWS:
	* doc/api/main_page.dox:
	Note support for new devices (AT43USB355, AT76C711, AT86RF401).

2003-02-27  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in, crt1/Makefile.am, include/avr/io.h:
	Add support for AT43USB355, AT76C711, AT86RF401.
	* include/avr/io43u35x.h: New file, thanks to Keith Gudger.
	* include/avr/io86r401.h: New file, thanks to Colin O'Flynn.

2003-02-27  Theodore A. Roth  <troth@openavr.org>

	* doc/api/acknowledge.dox:
	* doc/api/tools-install.dox:
	* doc/api/using-avrprog.dox:
	Update avrdude information.

2003-02-26  Theodore A. Roth  <troth@openavr.org>

	* doc/api/acknowledge.dox: Add Rich Neswold.

2003-02-25  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom169.h: Update some comments only.
